# bioinformatika

./: .gitignore  CMakeLists.txt  LICENSE  README.md  g1.txt  g2.txt  gH2.txt  jurij1.txt  o1.txt
data/: HIV_algnm_pairs.txt  HIV_gene_pairs.txt  a0.txt  a1.txt  a10.txt  a11.txt  a12.txt  a13.txt  a14.txt  a15.txt  a16.txt  a17.txt  a18.txt  a19.txt  a2.txt  a20.txt  a21.txt  a22.txt  a23.txt  a24.txt  a25.txt  a26.txt  a27.txt  a28.txt  a29.txt  a3.txt  a30.txt  a31.txt  a32.txt  a33.txt  a34.txt  a35.txt  a36.txt  a37.txt  a38.txt  a4.txt  a5.txt  a6.txt  a7.txt  a8.txt  (+46 more)
matrix_generator/: a2.txt  a4.txt  a6.txt  algnmt_pairs.txt  g1.txt  g2.txt  g3.txt  g4.txt  gene_pairs.txt  genes_from_alignment.py  matrix_generator.py  pairs.txt
scripts/: genes_from_alignment.py  genes_to_pair.sh  matrix_generator.py
src/: HMMAlign.cpp  HMMAlign.h  Main.cpp  NeedlemanWunsch.cpp  NeedlemanWunsch.h
